# bsuir-bug-tracker

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/BsuirBugTracker/: CMakeLists.txt  Types.cpp  Types.h  bsuir-bug-tracker.manifest  bsuir-bug-tracker.rc
Source/BsuirBugTracker/Controls/: Button.cpp  Button.h  CMakeLists.txt  Controls.h
Source/BsuirBugTracker/Main/: CMakeLists.txt  Main.cpp
Source/BsuirBugTracker/Storage/: Attachment.cpp  Attachment.h  Bug.cpp  Bug.h  CMakeLists.txt  SerializeableList.h  Storage.cpp  Storage.h  StorageHelpers.cpp  StorageHelpers.h
Source/BsuirBugTracker/Types/: CMakeLists.txt  SerializeableList.h  SerializeableString.h  SerializeableTimestamp.h  SerializedDataTypes.h  StringDataTypes.h  TimeTypes.h  Types.cpp  Types.h
Source/BsuirBugTracker/Utils/: Event.h  GuidGenerator.h
Source/BsuirBugTracker/Windows/: BaseWindow.cpp  BaseWindow.h  CMakeLists.txt
Source/BsuirBugTracker/Windows/Controls/: BaseWindow.cpp  BaseWindow.h  Button.cpp  Button.h  CMakeLists.txt  ComboBox.cpp  ComboBox.h  Controls.h  ListView.cpp  ListView.h  Panel.cpp  Panel.h  Text.cpp  Text.h  TextInput.cpp  TextInput.h  TimestampPicker.cpp  TimestampPicker.h  Window.cpp  Window.h  WindowHelpers.h
Source/BsuirBugTracker/Windows/MainWindow/: BugViewPanel.cpp  BugViewPanel.h  BugsListView.cpp  BugsListView.h  BugsListViewFilterPanel.cpp  BugsListViewFilterPanel.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h
Source/Main/: CMakeLists.txt  Main.cpp
